white blur background for first image

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 #guard-dog {
-	background: url(images/first-background.jpg) 50% 0 no-repeat fixed;
+	background: url(images/white_blur.png) 50% 0 no-repeat fixed;
 	color: white;
 	height: 720px;
 	margin: 0 auto;
