--- a/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
+++ b/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
@@ -2,6 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="15dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingBottom="15dp"
     android:background="@color/color1">
+
+    <ImageButton
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@mipmap/settings"
+        android:onClick="settingsPressed"/>
 
 </RelativeLayout>
