--- a/Android/MyApplication/app/src/main/res/layout/settings_layout.xml
+++ b/Android/MyApplication/app/src/main/res/layout/settings_layout.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/color1">
+
+    <com.bramblellc.myapplication.layouts.CustomActionbar
+        android:id="@+id/settings_custom_actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_alignParentTop="true"
+        android:text="Settings"
+        android:textColor="@color/color1"
+        app:backgroundType="1"
+        app:backButtonColor="blue"/>
 
 </RelativeLayout>
