--- a/Android/MyApplication/app/src/main/res/drawable/full_width_button_nobottom.xml
+++ b/Android/MyApplication/app/src/main/res/drawable/full_width_button_nobottom.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white" />
+            <solid android:color="@color/color1" />
         </shape>
     </item>
 </layer-list>
