--- a/Android/MyApplication/app/src/main/res/drawable/full_width_checkbox_pressed.xml
+++ b/Android/MyApplication/app/src/main/res/drawable/full_width_checkbox_pressed.xml
@@ -11,5 +11,10 @@
             <solid android:color="@color/color1" />
         </shape>
     </item>
+    <item android:right="12dp">
+        <bitmap
+            android:src="@mipmap/checked_box_blue"
+            android:gravity="center_vertical|right" />
+    </item>
 
 </layer-list>
