--- a/Android/MyApplication/app/src/main/res/drawable/full_width_checkbox_pressed_nobottom.xml
+++ b/Android/MyApplication/app/src/main/res/drawable/full_width_checkbox_pressed_nobottom.xml
@@ -3,13 +3,13 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/darkGray" />
-        </shape>
-    </item>
-    <item android:bottom="1dp">
-        <shape android:shape="rectangle">
             <solid android:color="@color/color1" />
         </shape>
+    </item>
+    <item android:right="12dp">
+        <bitmap
+            android:src="@mipmap/checked_box_blue"
+            android:gravity="center_vertical|right" />
     </item>
 
 </layer-list>
