random backgrounds on landing and smaller website icons

--- a/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
+++ b/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
     android:paddingBottom="15dp"
-    android:background="@color/color1">
+    android:background="@color/color1"
+    android:id="@+id/background">
 
     <ImageButton
         android:layout_alignParentRight="true"
