images added for data section

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 }
 
 #dog-data {
-	background: url(images/blurred_2.png) 50% 0 no-repeat fixed;
+	background: url(images/blur_2.png) 50% 0 no-repeat fixed;
 	color: white;
 	height: 720px;
 	margin: 0 auto;
