--- a/styles.css
+++ b/styles.css
@@ -73,16 +73,51 @@ body {
 }
 
 .smartphones-nums h1 {
-	position: absolute;
+	position: relative;
 	color: #FCFFF5;
+	font-weight: bold;
+	top: 20px;
+	left: 20px;
 }
 
 .users-nums h1 {
-	position: absolute;
+	position: relative;
 	color: #FCFFF5;
+	font-weight: bold;
+	top: 20px;
+	left: 25px;
 }
 
 .alarms-nums h1 {
-	position: absolute;
+	position: relative;
 	color: #FCFFF5;
+	font-weight: bold;
+	top: 20px;
+	left: 20px;
+}
+
+.smartphones-description h4 {
+	position: relative;
+	color: #FCFFF5;
+	top: 20px;
+	right: 30px;
+}
+
+.users-description h4 {
+	position: relative;
+	color: #FCFFF5;
+	top: 20px;
+	right: 28px;
+}
+
+.alarms-description h4 {
+	position: relative;
+	color: #FCFFF5;
+	top: 20px;
+	left: -2px;
+}
+
+.impact-header {
+	position: relative;
+	bottom: 90px;
 }
