--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 body {
 	margin: 0;
 	padding: 0;
@@ -20,7 +18,7 @@ body {
 #dog-info {
 	background-color: #FCFFF5;
 	color: white; 
-	height: 600px;
+	height: 720px;
 	margin: 0 auto;
 	padding: 120px 0 0 0;
 }
@@ -35,6 +33,14 @@ body {
 
 #dog-pack {
 	background-color: #3E606F;
+	color: white;
+	height: 720px;
+	margin: 0 auto;
+	padding: 120px 0 0 0;
+
+}
+#dog-app {
+	background: url(images/blurred_2.png) 50% 0 no-repeat fixed;
 	color: white;
 	height: 720px;
 	margin: 0 auto;
