--- a/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
+++ b/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
@@ -5,7 +5,7 @@
     android:paddingTop="15dp"
     android:paddingLeft="15dp"
     android:paddingRight="15dp"
-    android:paddingBottom="15dp"
+    android:paddingBottom="2dp"
     android:background="@color/color1"
     android:id="@+id/background">
 
@@ -21,5 +21,14 @@
         android:id="@+id/landing_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/color4"
+        android:textSize="12sp"
+        android:text="Version 0.1.0 © Bramble LLC"/>
 
 </RelativeLayout>
