--- a/Android/MyApplication/app/src/main/res/layout/settings_layout.xml
+++ b/Android/MyApplication/app/src/main/res/layout/settings_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/color1">
 
@@ -28,15 +29,32 @@
         android:layout_width="fill_parent"
         android:layout_height="@dimen/list_item_height"
         android:layout_below="@+id/my_dogs_full_width_button"
-        android:text="Add number for phone damages"
+        android:text="Phone protection services"
+        app:lowerLine="true" />
+
+    <com.bramblellc.myapplication.layouts.FullWidthButton
+        android:id="@+id/logout_full_width_button"
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/list_item_height"
+        android:layout_below="@+id/phone_aid_input_full_width_button"
+        android:text="Log out"
         app:lowerLine="true" />
 
     <com.bramblellc.myapplication.layouts.FullWidthButton
         android:id="@+id/test_full_width_button"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/list_item_height"
-        android:layout_below="@+id/phone_aid_input_full_width_button"
+        android:layout_below="@+id/logout_full_width_button"
         android:text="TEST ENVIRONMENT"
         app:lowerLine="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/darkGray"
+        android:textSize="12sp"
+        android:text="Version 0.1.0 © Bramble LLC"/>
 
 </RelativeLayout>
