--- a/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
+++ b/Android/MyApplication/app/src/main/res/layout/landing_layout.xml
@@ -17,10 +17,12 @@
         android:background="@mipmap/settings"
         android:onClick="settingsPressed"/>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/landing_chart"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    <ImageView
+        android:id="@+id/transport_type"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/walking"/>
 
     <TextView
         android:layout_width="wrap_content"
